Full implementation of two endpoint (tested), partial of 3 more (untested)